--- a/kotlin-agendacalendarview/build.gradle
+++ b/kotlin-agendacalendarview/build.gradle
@@ -37,16 +37,16 @@ android {
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     // Google libraries
-    compile 'com.android.support:appcompat-v7:28.0.0'
-    compile 'com.android.support:recyclerview-v7:28.0.0'
-    compile 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
 
 //     other libraries
-    compile 'se.emilsjolander:stickylistheaders:2.7.0'
-    compile 'io.reactivex:rxjava:1.3.8'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api 'se.emilsjolander:stickylistheaders:2.7.0'
+    implementation 'io.reactivex:rxjava:1.3.8'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
 repositories {
     mavenCentral()
