--- a/kotlin-agendacalendarview/build.gradle
+++ b/kotlin-agendacalendarview/build.gradle
@@ -26,7 +26,7 @@ android {
     }
     sourceSets {
         main {
-            assets.srcDirs = ['assets']//
+            assets.srcDirs = ['assets']
         }
     }
     compileOptions {
@@ -38,13 +38,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':StickyListHeaders')
     // Google libraries
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
 
 //     other libraries
-    api 'se.emilsjolander:stickylistheaders:2.7.0'
+    //api 'se.emilsjolander:stickylistheaders:2.7.0'
     implementation 'io.reactivex:rxjava:1.3.8'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
